[tool.poetry]
name = "vocab-extractor"
version = "0.1.0"
description = ""
authors = ["David J Nevin <dnevincodes@gmail.com>"]
readme = "README.md"
packages = [{include = "vocab_extractor"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
